fix bug in assigning employee and decrease metadata spacing

--- a/src/styles/pages/WorkOrders.module.css
+++ b/src/styles/pages/WorkOrders.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 0rem 1rem;
 }
 
 .workOrderMetadataContainerEditButtonContainer {
